fixing layout issues

--- a/src/styles/components/sidebar.less
+++ b/src/styles/components/sidebar.less
@@ -5,13 +5,16 @@
   width: 240px;
   min-width: 160px;
   height: 100vh;
-  padding: 30px 0;
-
+  user-select: none;
+  
   &__menu {
+    padding: 30px 0;
+    marign: none;
+
     &__link {
       color: #ffffff;
       font-size: 1.1rem;
-      padding: 14px 30px;
+      padding: 16px 24px;
       background: transparent;
       border-right: 3px solid transparent;
       display: block;
